# blutils

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: release.yml
design/: Blutils App.html  README.md  blutils-app.jsx  blutils-palette.jsx  blutils-pipe.jsx  blutils-styles.css  blutils-tools.jsx
docs/: new-tools-plan.md
public/: _headers  _redirects
scripts/: generate-icons.mjs  prerender.mjs  preview-static.mjs  render-og.mjs  subset-fonts.mjs
src/: categories.ts  entry-server.tsx  globals.d.ts  main.tsx  preact-augment.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_drag.rs  main.rs
src/app/: App.tsx  csp.ts  platform.ts  tauri-bridge.ts  use-focus-trap.ts
src/chain/: Chain.tsx  ops-registry.ts  runner.ts
src/chrome/: BrandMark.tsx  GithubMark.tsx  Sidebar.tsx  StatusBar.tsx
src/clipboard/: CopyAnnouncer.tsx  copy.ts
src/help/: ShortcutHelp.tsx
src/icons/: Icon.tsx  icon-set.ts
src/palette/: Palette.tsx  fuzzy.ts  palette-context.tsx
src/pins/: pins-context.tsx
src/router/: match.ts  router.tsx
src/storage/: inputs-mirror.ts  local.ts  schema.ts  session.ts  use-tool-input.ts
src/styles/: app.css  atmosphere.css  chain.css  chrome.css  craft.css  fonts.css  help.css  palette.css  reset.css  responsive.css  syntax.css  tabs.css  tokens.css  tools.css  tweaks.css  workspace.css
(+189 files in other folders)
