[package]
name = "blutils"
version = "0.1.0"
description = "Local-only developer utilities"
authors = ["blutarche"]
edition = "2021"

[lib]
name = "blutils_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native window dragging for the inset title bar (see src/macos_drag.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSWindow", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
block2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
